--- a/apps.conf
+++ b/apps.conf
@@ -113,4 +113,22 @@ APPS_QCOM_ONLY 	:= \
 
 APPS_KEEP_ORIGIN:=  Bluetooth.apk \
 					FusedLocation.apk \
-					Camera.apk
+					CameraZte.apk \
+					Ds.apk \
+					DsUI.apk \
+					FmRadio.apk \
+					MIPop.apk \
+					Stk.apk \
+					BasicDreams.apk \
+					DrmProvider.apk \
+					InputDevices.apk \
+					MusicFX.apk \
+					NoiseField.apk \
+					edpnotifier.apk \
+					Emode.apk \
+					NvCPLSvc.apk \
+					PhaseBeam.apk \
+					PicoTts.apk \
+					SharedStorageBackup.apk \
+					Tag.apk 
+					
